--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3422,6 +3422,27 @@ body.is-menu-visible #menu .close {
   padding: 0;
   box-sizing: border-box;
 }
+/* Applies styles to all .inner elements within #wrapper except for those within #cslider */
+#wrapper > * > .inner:not(#cslider) {
+  width: 100%;
+  max-width: 72em;
+  margin: 0 auto;
+  padding: 0 2.5em; /* Controls padding for default screen sizes */
+}
+
+/* Responsive adjustments for screens smaller than 640px */
+@media screen and (max-width: 640px) {
+  #wrapper > * > .inner:not(#cslider) {
+    padding: 0 1.25em; /* Reduces padding for smaller screens */
+  }
+}
+
+/* Resets for all elements to ensure consistency in box sizing and margins */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   font-family: Arial, sans-serif;
@@ -3639,45 +3660,18 @@ body {
   transition: width 0.3s ease;
 }
 
-/* Mobile-specific styles */
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .cslider-slide {
-    /* 1 slide visible */
-
-    flex: 0 0 calc(100% / 1.5); /* Default: 3 images visible */
-    max-width: calc(80% / 1.5);
-  }
-
-  .cslider-hover-text {
-    position: static;
-    transform: none;
-    opacity: 1;
-    background-color: transparent;
-    padding: 0;
-  }
-
-  .cslider-view {
-    display: none;
-  }
-
-  .cslider-products {
-    font-size: 20px;
-    text-align: center;
-    margin-top: 10px;
-  }
-}
-
-@media (min-width: 640px) and (max-width: 768px) {
-  .cslider-slide {
-    flex: 0 0 calc(100% / 2); /* 2 slides visible */
-    max-width: 50%;
+    flex: 0 0 calc(100% / 1.5); /* 2 slides visible */
+    max-width: 70%;
   }
 }
 @media (min-width: 769px) and (max-width: 1023px) {
   .cslider-slide {
     flex: 0 0 calc(100% / 2.5); /* 2.5 slides visible */
-    max-width: 40%;
+    max-width: 80%;
   }
+  
 }
 .divider {
   height: 2px; /* Thickness of the divider */
